# ems

./: CMakeLists.txt  README.md  README_zh.md
cmake/Modules/: FindMiniaudio.cmake
doc/pages/: format.md  format_zh.md
example/: CMakeLists.txt
example/audio/: Audio.hpp
example/basic/: CMakeLists.txt
example/basic/src/: main.c  main.cpp
example/songs/: ode_to_joy.ems  twinkle_star.ems
include/: ems_parser.h  ems_parser.hpp
src/: ems_parser.c
